# serverless

./: .gitignore  BUILD  LICENSE  README.md  WORKSPACE  bazel-bin  bazel-genfiles  bazel-out  bazel-serverless  bazel-testlogs  go.mod
cmd/serverless/: BUILD.bazel  main.go
pkg/worker/client/: client.go
